# Odysseia-protect

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
Odysseia-protect/: README.md  bot_database.db  main.py  pyproject.toml
Odysseia-protect/alembic/: env.py
Odysseia-protect/alembic/versions/: b1a7a6c0e8d5_add_reaction_required_to_threads.py  f7b4c3d9a1e0_add_reaction_emoji_to_threads.py
Odysseia-protect/docs/: architecture.md  bot_plan.md  database_schema.md
Odysseia-protect/src/: config.py
Odysseia-protect/src/cogs/: download_cog.py  info_cog.py  manage_cog.py  upload_cog.py
Odysseia-protect/tests/: __init__.py  conftest.py  test_cogs.py  test_integration.py  test_repositories.py  test_services.py
alembic/versions/: 5e6f70913e2c_add_quick_mode_enabled_to_threads_table.py  939f3c162e83_add_upload_mode_to_resources_table.py  b1a7a6c0e8d5_add_reaction_required_to_threads.py  f7b4c3d9a1e0_add_reaction_emoji_to_threads.py
docs/: architecture.md  bot_plan.md  database_schema.md
src/: config.py
src/cogs/: antispam_cog.py  download_cog.py  info_cog.py  manage_cog.py  upload_cog.py
src/database/: __init__.py  database.py  models.py  schemas.py
src/services/: base.py  download_service.py  management_service.py  reaction_wall_service.py  upload_service.py
src/ui/: download_ui.py  management_ui.py  upload_ui.py
src/utils/: auth.py  discord_utils.py  formatting.py
tests/: conftest.py  test_cogs.py  test_integration.py  test_repositories.py  test_services.py
(+28 files in other folders)
